Mon Nov 11 20:51:27 1996  Tom Yu  <tlyu@mit.edu>

	* configure.in: Add AC_CANONICAL_HOST to deal with new pre.in.

Thu Nov  7 20:54:24 1996  Tom Yu  <tlyu@mit.edu>

	* configure.in: Remove spurious WITH_CCOPTS and KRB_INCLUDE.

Thu Nov  7 13:02:28 1996  Barry Jaspan  <bjaspan@mit.edu>

	* api.2/init-v2.exp: update tests for new init error codes and
 	get_config_params behavior when KDC_PROFILE does not exist

	* api.2/mod-principal-v2.exp: provide finer-grained test numbers
 	in case of failure

Wed Nov  6 17:48:49 1996  Barry Jaspan  <bjaspan@mit.edu>

	* lib/lib.t: global $test everywhere it is used

	* api.2/mod-principal-v2.exp: init to kadmin/admin, not
 	kadmin/changepw; specify real principal, not null (obviously I
 	never ran these tests via the client library before)

Fri Nov  1 13:15:37 1996  Barry Jaspan  <bjaspan@mit.edu>

	* api.2/get-principal-v2.exp, api.2/mod-principal-v2.exp: update
 	for new tl_data semantics [krb5-admin/140]

Thu Oct 31 08:42:18 1996  Ezra Peisach  <epeisach@mit.edu>

	* Makefile.in (check): Only run tests is Perl, tcl, runtest.

	* configure.in: Check for Perl before running tests.

Fri Oct 25 16:43:52 1996  Ezra Peisach  <epeisach@mit.edu>

	* Makefile.in (init-test): Add -UUSE_KADM5_API_VERSION before the
		-D of same.  

Wed Oct 23 13:32:40 1996  Ezra Peisach  <epeisach@kangaroo.mit.edu>

	* api.2/get-principal-v2.exp: Fix for test 100 where {} is not
		equivalent to "{}" for empty tl_data field.

Mon Oct 21 16:27:28 1996  Barry Jaspan  <bjaspan@mit.edu>

	* api.2/mod-principal-v2.exp: create this file, implement tests
 	100-104 [krb5-admin/20]

Fri Oct 18 13:21:08 1996  Barry Jaspan  <bjaspan@mit.edu>

	* api.2/init-v2.exp: add test 117, for default max_life
 	[krb5-admin/18]

Thu Oct 17 16:14:11 1996  Barry Jaspan  <bjaspan@mit.edu>

	* config/unix.exp, lib/lib.t: begin in process of making these
 	unit tests less horribly inefficient

	* api.[02]/crte-principal.exp, api.[02].mod-principal: update unit